Ajout a la page d'acceuil

--- a/style.css
+++ b/style.css
@@ -1,105 +1,100 @@
-@media (max-width: 600px) {
-.hero-section {
-        grid-template-columns: 1fr; /* Une seule colonne sur les petits écrans */
-    }
-}
+
 body {
     margin: 0px;
-    margin-right: 0px;
 }
 
-.hero-section{
-     background-color: #aa2720;
+
+.hero-section {
+    background-color: #aa2720;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 50px;
-    
-h1{
-    font-size: 9rem;       
-    color: rgb(255, 255, 255);
-    font-family:Bangers;
-    display: flex;
-    justify-content: center;
-    margin: 0%;
-    padding-right: 35%;
-    
- 
+
+
+    h1 {
+        font-size: 9rem;
+        color: rgb(255, 255, 255);
+        font-family: Bangers;
+        display: flex;
+        justify-content: center;
+        margin: 0px;
+        /* padding-right: 35%; */
+    }
+
+    p {
+        font-size: 40px;
+        display: flex;
+        font-style: oblique;
+        color: rgb(255, 255, 255);
+        text-align: justify;
+
+    }
+
 }
 
-p{
-    font-size: 40px;
-    display: flex;
-    font-style: oblique;
-    color: rgb(255, 255, 255);
-    text-align: justify;
-    
-}
 
-}
-
-.hero-section>img{
+.hero-section>img {
     width: 100%;
-
 }
-    
-.oui-oui{
+
+.oui-oui {
     color: rgb(255, 255, 255);
     font-size: 50px;
     font-style: oblique;
-    display: flex;
-    justify-content: center;
-
 }
 
-.nn-nn{
+
+.nn-nn {
     color: white;
     font-size: 70px;
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
-
 }
 
-.holo-section{
-   background-color: #d26122;
-   display: flex;
+
+.holo-section {
+    background-color: #d26122;
+    display: flex;
     align-items: center;
-   justify-content: center;
-   padding: 20px;
-   flex-direction: column;
-  
+    justify-content: center;
+    padding: 20px;
+    flex-direction: column;
 }
 
-.reseaux>img{
+
+.reseaux>img {
     width: 10%;
 }
-.reseaux{
+
+
+.reseaux {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.zero-section{
+.zero-section {
     background-color: #f4e4b8;
     display: grid;
-    grid-template-columns:repeat(3,1fr); 
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     align-items: center;
     justify-content: center;
     text-align: justify;
-    
 }
 
-.zo{
+.zo {
     font-size: 35px;
-    color:#000000;
+    color: #000000;
     text-align: left;
     font-weight: bold;
-    padding-left: 50px;
-    
+    /* padding-left: 50px; */
+
 }
 
-.zi{
+
+.zi {
     color: #404040;
     font-size: 80px;
     display: flex;
@@ -107,29 +102,32 @@ p{
     align-items: center;
     text-transform: uppercase;
     font-weight: bold;
-    padding-left: 90px;
+    /* padding-left: 90px; */
 
 }
 
-.za{
+
+.za {
     color: rgb(0, 0, 0);
     font-size: 35px;
     display: flex;
     justify-content: end;
     text-align: left;
     font-weight: bold;
-    
+
 }
 
 
+@media screen and (max-width : 600px) {
+    .hero-section {
+        grid-template-columns: 1fr;
+    }
 
-    
+    .holo-section {
+        grid-template-columns: 1fr;
+    }
 
-
-
-
-   
-
-   
-
-
+    .zero-section {
+        grid-template-columns: 1fr;
+    }
+}
